src/jvm.rs


impl jvm_version_info {
	#[inline]
	pub fn update_version(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 8u8) as u32) }
	}
	#[inline]
	pub fn set_update_version(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(0usize, 8u8, val as u64)
		}
	}
	#[inline]
	pub fn special_update_version(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(8usize, 8u8) as u32) }
	}
	#[inline]
	pub fn set_special_update_version(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(8usize, 8u8, val as u64)
		}
	}
	#[inline]
	pub fn reserved1(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(16usize, 16u8) as u32) }
	}
	#[inline]
	pub fn set_reserved1(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(16usize, 16u8, val as u64)
		}
	}
	#[inline]
	pub fn new_bitfield_1(
		update_version: ::std::os::raw::c_uint,
		special_update_version: ::std::os::raw::c_uint,
		reserved1: ::std::os::raw::c_uint,
	) -> __BindgenBitfieldUnit<[u8; 4usize], u16> {
		let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize], u16> =
			Default::default();
		__bindgen_bitfield_unit.set(0usize, 8u8, {
			let update_version: u32 = unsafe { ::std::mem::transmute(update_version) };
			update_version as u64
		});
		__bindgen_bitfield_unit.set(8usize, 8u8, {
			let special_update_version: u32 =
				unsafe { ::std::mem::transmute(special_update_version) };
			special_update_version as u64
		});
		__bindgen_bitfield_unit.set(16usize, 16u8, {
			let reserved1: u32 = unsafe { ::std::mem::transmute(reserved1) };
			reserved1 as u64
		});
		__bindgen_bitfield_unit
	}
	#[inline]
	pub fn is_attach_supported(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_2.get(0usize, 1u8) as u32) }
	}
	#[inline]
	pub fn set_is_attach_supported(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_2.set(0usize, 1u8, val as u64)
		}
	}
	#[inline]
	pub fn new_bitfield_2(
		is_attach_supported: ::std::os::raw::c_uint,
	) -> __BindgenBitfieldUnit<[u8; 12usize], u8> {
		let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 12usize], u8> =
			Default::default();
		__bindgen_bitfield_unit.set(0usize, 1u8, {
			let is_attach_supported: u32 = unsafe { ::std::mem::transmute(is_attach_supported) };
			is_attach_supported as u64
		});
		__bindgen_bitfield_unit
	}
}

extern "C" {
	pub fn JVM_GetVersionInfo(env: *mut JNIEnv, info: *mut jvm_version_info, info_size: size_t);
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jdk_version_info {
	pub jdk_version: ::std::os::raw::c_uint,
	pub _bitfield_1: __BindgenBitfieldUnit<[u8; 4usize], u16>,
	pub reserved2: ::std::os::raw::c_uint,
	pub _bitfield_2: __BindgenBitfieldUnit<[u8; 12usize], u8>,
}

impl jdk_version_info {
	#[inline]
	pub fn update_version(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 8u8) as u32) }
	}
	#[inline]
	pub fn set_update_version(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(0usize, 8u8, val as u64)
		}
	}
	#[inline]
	pub fn special_update_version(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(8usize, 8u8) as u32) }
	}
	#[inline]
	pub fn set_special_update_version(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(8usize, 8u8, val as u64)
		}
	}
	#[inline]
	pub fn reserved1(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_1.get(16usize, 16u8) as u32) }
	}
	#[inline]
	pub fn set_reserved1(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_1.set(16usize, 16u8, val as u64)
		}
	}
	#[inline]
	pub fn new_bitfield_1(
		update_version: ::std::os::raw::c_uint,
		special_update_version: ::std::os::raw::c_uint,
		reserved1: ::std::os::raw::c_uint,
	) -> __BindgenBitfieldUnit<[u8; 4usize], u16> {
		let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 4usize], u16> =
			Default::default();
		__bindgen_bitfield_unit.set(0usize, 8u8, {
			let update_version: u32 = unsafe { ::std::mem::transmute(update_version) };
			update_version as u64
		});
		__bindgen_bitfield_unit.set(8usize, 8u8, {
			let special_update_version: u32 =
				unsafe { ::std::mem::transmute(special_update_version) };
			special_update_version as u64
		});
		__bindgen_bitfield_unit.set(16usize, 16u8, {
			let reserved1: u32 = unsafe { ::std::mem::transmute(reserved1) };
			reserved1 as u64
		});
		__bindgen_bitfield_unit
	}
	#[inline]
	pub fn thread_park_blocker(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_2.get(0usize, 1u8) as u32) }
	}
	#[inline]
	pub fn set_thread_park_blocker(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_2.set(0usize, 1u8, val as u64)
		}
	}
	#[inline]
	pub fn post_vm_init_hook_enabled(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_2.get(1usize, 1u8) as u32) }
	}
	#[inline]
	pub fn set_post_vm_init_hook_enabled(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_2.set(1usize, 1u8, val as u64)
		}
	}
	#[inline]
	pub fn pending_list_uses_discovered_field(&self) -> ::std::os::raw::c_uint {
		unsafe { ::std::mem::transmute(self._bitfield_2.get(2usize, 1u8) as u32) }
	}
	#[inline]
	pub fn set_pending_list_uses_discovered_field(&mut self, val: ::std::os::raw::c_uint) {
		unsafe {
			let val: u32 = ::std::mem::transmute(val);
			self._bitfield_2.set(2usize, 1u8, val as u64)
		}
	}
	#[inline]
	pub fn new_bitfield_2(
		thread_park_blocker: ::std::os::raw::c_uint,
		post_vm_init_hook_enabled: ::std::os::raw::c_uint,
		pending_list_uses_discovered_field: ::std::os::raw::c_uint,
	) -> __BindgenBitfieldUnit<[u8; 12usize], u8> {
		let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 12usize], u8> =
			Default::default();
		__bindgen_bitfield_unit.set(0usize, 1u8, {
			let thread_park_blocker: u32 = unsafe { ::std::mem::transmute(thread_park_blocker) };
			thread_park_blocker as u64
		});
		__bindgen_bitfield_unit.set(1usize, 1u8, {
			let post_vm_init_hook_enabled: u32 =
				unsafe { ::std::mem::transmute(post_vm_init_hook_enabled) };
			post_vm_init_hook_enabled as u64
		});
		__bindgen_bitfield_unit.set(2usize, 1u8, {
			let pending_list_uses_discovered_field: u32 =
				unsafe { ::std::mem::transmute(pending_list_uses_discovered_field) };
			pending_list_uses_discovered_field as u64
		});
		__bindgen_bitfield_unit
	}
}

pub type jdk_version_info_fn_t =
::std::option::Option<unsafe extern "C" fn(info: *mut jdk_version_info, info_size: size_t)>;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JDK1_1InitArgs {
	pub version: jint,
	pub properties: *mut *mut ::std::os::raw::c_char,
	pub checkSource: jint,
	pub nativeStackSize: jint,
	pub javaStackSize: jint,
	pub minHeapSize: jint,
	pub maxHeapSize: jint,
	pub verifyMode: jint,
	pub classpath: *mut ::std::os::raw::c_char,
	pub vfprintf: ::std::option::Option<
		unsafe extern "C" fn(
			fp: *mut FILE,
			format: *const ::std::os::raw::c_char,
			args: *mut __va_list_tag,
		) -> jint,
	>,
	pub exit: ::std::option::Option<unsafe extern "C" fn(code: jint)>,
	pub abort: ::std::option::Option<unsafe extern "C" fn()>,
	pub enableClassGC: jint,
	pub enableVerboseGC: jint,
	pub disableAsyncGC: jint,
	pub verbose: jint,
	pub debugging: jboolean,
	pub debugPort: jint,
}

pub type __builtin_va_list = [__va_list_tag; 1usize];

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __va_list_tag {
	pub gp_offset: ::std::os::raw::c_uint,
	pub fp_offset: ::std::os::raw::c_uint,
	pub overflow_arg_area: *mut ::std::os::raw::c_void,
	pub reg_save_area: *mut ::std::os::raw::c_void,
}
